--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <script>
         // CONFIGURATION
         const DATA_URL = 'https://donypsaju.github.io/dreamHome/data.json'; 
-        const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLScBerkKLjK0Vbn_tN6mTIOmswBQ-rvmm1gzk3H-OYs9BsqunQ/viewform";
+        const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLScBerkKLjK0Vbn_tN6mTIOmswBQ-rvmm1gzk3H-OYs9BsqunQ/viewform?embedded=true";
 
         // STATE
         let RAW_DATA = { meta: {}, expenses: [] };
